Backport from trunk rev7371: Bugfix: add a missing lpr dependency needed by java for printing
git-svn-id: file:///home/code/svn/ovd/branches/3.0@7405 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/packaging/debian/ovd-java-clients/hardy/control
+++ b/packaging/debian/ovd-java-clients/hardy/control
@@ -14,7 +14,8 @@ Description: Ulteo Open Virtual Desktop - desktop applet
 
 Package: ulteo-ovd-externalapps-client
 Architecture: all
-Depends: sun-java6-jre | openjdk-6-jre, libovd-xclient-area
+Depends: sun-java6-jre | openjdk-6-jre, cups-bsd | lpr,
+ libovd-xclient-area
 Recommends: ulteo-ovd-integrated-launcher
 Description: Ulteo Open Virtual Desktop - integrated client
  This application is used in the Open Virtual Desktop to display the user
