--- a/OvdServer/examples/slaveserver.conf
+++ b/OvdServer/examples/slaveserver.conf
@@ -42,6 +42,10 @@ level = error warn info debug
 # enable the web admin redirection
 # default value is 'false'
 
+# http_keep_alive = true|false
+# keep enabled the keep alive HTTP feature if used, disabled instead
+# default value is 'true'
+
 
 [FileServer]
 # user = 
