Feature: XDG menu integration
git-svn-id: file:///home/code/svn/ovd/trunk@7427 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -84,6 +84,10 @@
     <copy todir="build/resources/keymaps">
       <fileset dir="keymaps"/>
     </copy>
+    <mkdir dir="build/resources/integration/linux/"/>
+    <copy todir="build/resources/integration/linux/">
+      <fileset dir="desktopIntegration/linux"/>
+    </copy>
     <copy file="misc/krb5.ini" todir="build/resources" />
     <copy file="misc/login.conf" todir="build/resources" />
     <echo file="build/VERSION" message="${version}" />
