Improvement: Move desktop integration files to misc/
git-svn-id: file:///home/code/svn/ovd/trunk@7433 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -86,7 +86,7 @@
     </copy>
     <mkdir dir="build/resources/integration/linux/"/>
     <copy todir="build/resources/integration/linux/">
-      <fileset dir="desktopIntegration/linux"/>
+      <fileset dir="misc/desktopIntegration/linux"/>
     </copy>
     <copy file="misc/krb5.ini" todir="build/resources" />
     <copy file="misc/login.conf" todir="build/resources" />
@@ -412,7 +412,7 @@
         <include name="scripts/*" />
         <include name="icons/**" />
         <include name="po/*" />
-        <include name="misc/*" />
+        <include name="misc/**" />
         <include name="windowsPathsJNI/*" />
         <include name="libXClientArea/**" />
       </fileset>
