--- a/packaging/debian/ovd-subsystem/lucid/rules
+++ b/packaging/debian/ovd-subsystem/lucid/rules
@@ -8,9 +8,9 @@ pre-build::
 	cp $(CURDIR)/init/debian/ulteo-ovd-subsystem $(CURDIR)/debian/ulteo-ovd-subsystem.init
 
 install/ulteo-ovd-subsystem::
-	CONFDIR=$(CURDIR)/debian/$(cdbs_curpkg)/etc/ulteo/ ; \
-	mkdir -p $$CONFDIR ; \
-	echo "CHROOTDIR=" > $$CONFDIR/subsystem.conf
+	install -D conf/default.conf $(DEB_DESTDIR)/etc/default/subsystem ; \
+	install -D conf/subsystem.conf $(DEB_DESTDIR)/etc/ulteo/subsystem.conf ; \
+	install -D script/uchroot $(DEB_DESTDIR)/usr/sbin/uchroot
 
 clean::
 	#debconf-updatepo
