typo: add comment
git-svn-id: file:///home/code/svn/ovd/trunk@7479 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/Subsystem/conf/default.conf
+++ b/Subsystem/conf/default.conf
@@ -1,7 +1,9 @@
 ###
 # Ulteo OVD Subsystem configuration default file
 #
-# /!\ this file should not be changed
+# /!\ this file should not be changed /!\
+# if you want change these variables, see the configuration file
+# /etc/ulteo/subsystem.conf
 ###
 
 # chroot location
