Bugfix: previous commit 7498 incomplete
git-svn-id: file:///home/code/svn/ovd/trunk@7499 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/OvdServer/examples/slaveserver.conf
+++ b/OvdServer/examples/slaveserver.conf
@@ -34,8 +34,8 @@ level = error warn info debug
 # max_connection = 100
 # process_timeout = 60
 
-# web_client = [ip]
-# determine the OVD Web Client IP
+# web_client = http[s]://ip[:port]/
+# determine the OVD Web Client address
 # default value is empty, so the web client is not redirected
 
 # admin_redirection = true|false
