Improvement: change name 'ovdSlaveServer' to 'ulteo-ovd-slaveserver'
git-svn-id: file:///home/code/svn/ovd/trunk@7514 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/packaging/debian/ovd-slaveserver/squeeze/rules
+++ b/packaging/debian/ovd-slaveserver/squeeze/rules
@@ -10,5 +10,5 @@ include /usr/share/cdbs/1/class/python-distutils.mk
 
 # fix an issue: dh_installinit creates scripts after dh_pycentral
 binary-post-install/ulteo-ovd-slaveserver::
-	cp examples/ovdSlaveServer debian/ulteo-ovd-slaveserver.ovdSlaveServer.init
-	dh_installinit -pulteo-ovd-slaveserver --name=ovdSlaveServer
+	cp examples/ulteo-ovd-slaveserver.init debian
+	dh_installinit -pulteo-ovd-slaveserver
