Packaging: add new slaveserver support for SLES
git-svn-id: file:///home/code/svn/ovd/trunk@7527 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/OvdServer/setup.py.in
+++ b/OvdServer/setup.py.in
@@ -96,6 +96,7 @@ elif sys.platform == "linux2":
 	
 	setup_args["data_files"] = [
 		('/etc/ulteo/ovd', ['examples/slaveserver.conf']),
+		('/usr/sbin', ['examples/ovd-slaveserver-config']),
 		('/usr/share/ulteo/ovd/slaveserver', [
 			'ulteo-ovd-slaveserver.py', 'ovd-slaveserver-role.py',
 			'examples/samba.conf', 'examples/apache2.conf'])
