Bugfix: missing Norwegian flag in Web Client (bug from r7512 and r7515)
git-svn-id: file:///home/code/svn/ovd/trunk@7541 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/web/media/image/flags/Makefile.am
+++ b/client/web/web/media/image/flags/Makefile.am
@@ -167,6 +167,7 @@ scripts_DATA = ad.png \
                my.png \
                mz.png \
                na.png \
+               nb-no.png \
                nc.png \
                ne.png \
                nf.png \
