Add RHEL 6.0 documentation
git-svn-id: file:///home/code/svn/ovd/trunk@7542 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -23,6 +23,7 @@ SRC=\
 	Support_Debian_Lenny.xml \
 	Support_Debian_Squeeze.xml \
 	Support_RHEL_5.5.xml \
+	Support_RHEL_6.0.xml \
 	Support_openSUSE_11.2.xml \
 	Support_openSUSE_11.3.xml \
 	Support_SLES_11.SP1.xml \
