--- a/packaging/debian/ovd-subsystem/wheezy/rules
+++ b/packaging/debian/ovd-subsystem/wheezy/rules
@@ -6,7 +6,7 @@ pre-build::
 	cp $(CURDIR)/init/debian/ulteo-ovd-subsystem $(CURDIR)/debian/ulteo-ovd-subsystem.init
 
 install/ulteo-ovd-subsystem::
-	install -D conf/default.conf $(DEB_DESTDIR)/etc/default/subsystem ; \
+	install -D conf/default.conf $(DEB_DESTDIR)/etc/default/ulteo-ovd-subsystem ; \
 	install -D conf/subsystem.conf $(DEB_DESTDIR)/etc/ulteo/subsystem.conf ; \
 	install -D script/uchroot $(DEB_DESTDIR)/usr/sbin/uchroot
 
