Bugfix: the config file is not properly parsed for APS part (caused by the rev r6852, r6851)
git-svn-id: file:///home/code/svn/ovd/trunk@7546 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/OvdServer/examples/slaveserver.conf
+++ b/OvdServer/examples/slaveserver.conf
@@ -24,7 +24,7 @@ level = error warn info debug
 [ApplicationServer]
 # multithread = 
 # use thread system instead of multi processing
-# default is 0
+# default is true
 
 
 [Gateway]
