Bugfix(#306): persistent session problem with 2008r2
git-svn-id: file:///home/code/svn/ovd/trunk@7549 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/OvdServer/examples/slaveserver.conf
+++ b/OvdServer/examples/slaveserver.conf
@@ -25,6 +25,11 @@ level = error warn info debug
 # multithread = 
 # use thread system instead of multi processing
 # default is true
+#
+# checkShell =
+# Consider that a session is an ulteo session 
+# only if the shell start with OVD
+# default is false
 
 
 [Gateway]
