Feature: new option management for applet using a remote INI file
git-svn-id: file:///home/code/svn/ovd/trunk@7559 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/config/Makefile.am
+++ b/client/web/config/Makefile.am
@@ -22,7 +22,7 @@ sbin_SCRIPTS = ovd-webclient-config
 default_DATA = config.inc.php
 defaultdir = $(datadir)/ulteo/webclient/default
 
-conf_DATA = config.inc.php apache2.conf
+conf_DATA = config.inc.php apache2.conf config.client.ini
 confdir = $(sysconfdir)/ulteo/webclient
 
 ovd-webclient-config: ovd-webclient-config.in
@@ -31,7 +31,7 @@ ovd-webclient-config: ovd-webclient-config.in
 apache2.conf: apache2.conf.in
 	sed "s,@DATADIR@,$(datadir)," < $(srcdir)/$< > $@
 
-EXTRA_DIST = $(default_DATA) apache2.conf.in ovd-webclient-config.in
+EXTRA_DIST = $(default_DATA) apache2.conf.in ovd-webclient-config.in config.client.ini
 
 clean-local:
 	rm -f apache2.conf ovd-webclient-config
