Feature: add new offscreen cache feature. This option is desactivated by default
git-svn-id: file:///home/code/svn/ovd/trunk@7562 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/config/config.client.ini
+++ b/client/web/config/config.client.ini
@@ -5,6 +5,9 @@
 # usePersistentCache = true|false
 #  default is false
 
+# useOffscreenCache = true|false
+# default is false
+
 [persistentCache]
 # persistent cache option (if usePersistentCache is previously set to true)
 
