Feature: add bandwidth limitation for the rdpdr channel (this feature is desactivated by default)
git-svn-id: file:///home/code/svn/ovd/trunk@7565 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/config/config.client.ini
+++ b/client/web/config/config.client.ini
@@ -8,6 +8,14 @@
 # useOffscreenCache = true|false
 # default is false
 
+# useBandwidthLimitation = true|false
+# default is false
+
+# socketTimeout = 200
+# used when bandwidth limitation is activated
+# defined in millisecond
+
+
 [persistentCache]
 # persistent cache option (if usePersistentCache is previously set to true)
 
@@ -18,3 +26,12 @@
 # cacheMaxCell = number
 #  the maximum number of cell used for persistent cache
 #  default is 2250
+
+
+[limitation]
+# useDiskBandwidthLimitation = true|false
+# default is false
+
+# diskBandwidthLimit = 10000
+# used when bandwidth limitation is activated
+
