Bugfix: support new Linux kernel 3.0 (http://docs.python.org/library/sys.html#sys.platform)
git-svn-id: file:///home/code/svn/ovd/trunk@7572 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/OvdServer/setup.py.in
+++ b/OvdServer/setup.py.in
@@ -84,7 +84,7 @@ if sys.platform == "win32":
 	setup_args["options"] = {"py2exe": {"dll_excludes": ["w9xpopen.exe"]}}
 
 
-elif sys.platform == "linux2":
+elif sys.platform.startswith('linux'):
 	setup_args["packages"] = [
 		'ovd', 'ovd.Communication', 'ovd.Role',
 		'ovd.Role.FileServer', 'ovd.Role.ApplicationServer',
