--- a/OvdServer/examples/slaveserver.conf
+++ b/OvdServer/examples/slaveserver.conf
@@ -33,6 +33,18 @@ level = error warn info debug
 # max_connection = 100
 # process_timeout = 60
 
+# web_client = [ip]
+# determine the OVD Web Client IP
+# default value is empty, so the web client is not redirected
+
+# admin_redirection = true|false
+# enable the web admin redirection
+# default value is 'false'
+
+# http_keep_alive = true|false
+# keep enabled the keep alive HTTP feature if used, disabled instead
+# default value is 'true'
+
 
 [FileServer]
 # user = 
