Cleaning: Split code (SeamlessWindow and SeamlessWindowHistory)
git-svn-id: file:///home/code/svn/ovd/trunk@7587 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/ApplicationServer/windows/seamlessrdpshell/HookDll/hookdll.vcproj
+++ b/ApplicationServer/windows/seamlessrdpshell/HookDll/hookdll.vcproj
@@ -4,6 +4,7 @@
 	Version="9.00"
 	Name="HookDll"
 	ProjectGUID="{8B343CDF-D7F6-480A-83B8-7F534675FFE6}"
+	RootNamespace="HookDll"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="131072"
 	>
@@ -186,6 +187,22 @@
 	<Files>
 		<File
 			RelativePath="hookdll.c"
+			>
+		</File>
+		<File
+			RelativePath=".\seamlessWindow.c"
+			>
+		</File>
+		<File
+			RelativePath=".\seamlessWindow.h"
+			>
+		</File>
+		<File
+			RelativePath=".\seamlessWindowHistory.c"
+			>
+		</File>
+		<File
+			RelativePath=".\seamlessWindowHistory.h"
 			>
 		</File>
 	</Files>
