Backport from trunk rev7312: Code cleaning: auto detect the JAVAHOME by calculate the /usr/bin/javah simlink instead of hardcode it
git-svn-id: file:///home/code/svn/ovd/branches/3.0@7600 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/java/libXClientArea/Makefile
+++ b/client/java/libXClientArea/Makefile
@@ -18,7 +18,7 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 
 CC=gcc
-JAVAHOME?=/usr/lib/jvm/java-1.6.0-openjdk
+JAVAHOME?=$(realpath $(dir $(realpath $(shell which javah)))/..)
 EXEC=libXClientArea.so
 DESTDIR?=.
 LIBDIR=$(DESTDIR)/usr/lib/
