Backport from trunk: Add Norwegian Bokmål support and translations for the client part   * r7512: Add Norwegian Bokmål support and translations for the client part   * r7515: Bugfix: non existing png flags   * r7541: Bugfix: missing Norwegian flag in Web Client (bug from r7512 and r7515)
git-svn-id: file:///home/code/svn/ovd/branches/3.0@7601 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/web/media/image/flags/Makefile.am
+++ b/client/web/web/media/image/flags/Makefile.am
@@ -167,13 +167,13 @@ scripts_DATA = ad.png \
                my.png \
                mz.png \
                na.png \
+               nb-no.png \
                nc.png \
                ne.png \
                nf.png \
                ng.png \
                ni.png \
                nl.png \
-               no-nb.png \
                no.png \
                np.png \
                nr.png \
