--- a/client/web/web/Makefile.am
+++ b/client/web/web/Makefile.am
@@ -1,6 +1,7 @@
 SUBDIRS = applet auth includes media PEAR
 
 scripts_DATA = applications.php \
+               config.php \
                external.php \
                icon.php \
                index.php \
