--- a/Subsystem/setup.py.in
+++ b/Subsystem/setup.py.in
@@ -1,8 +1,9 @@
-#!/bin/sh
+#!/usr/bin/python
+# -*- coding: UTF-8 -*-
 
-# Copyright (C) 2010 Ulteo SAS
+# Copyright (C) 2011 Ulteo SAS
 # http://www.ulteo.com
-# Author Samuel BOVEE <samuel@ulteo.com> 2011
+# Author Samuel BOVEE    <samuel@ulteo.com> 2011
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -18,17 +19,19 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 
-# get version
-if [ -n "$OVD_VERSION" ]; then
-    version="$OVD_VERSION"
-else
-    if [ -d .svn ]; then
-      revision=$(LC_ALL=C svn info . | awk '/^Revision: / {printf "%05d\n", $2}')
-    else
-      revision=0
-    fi
-    version="99.99.svn$revision"
-fi
+from distutils.core import setup
 
-sed "s/@PKG_VERSION@/${version}/g" setup.py.in > setup.py
-sed "s/@PKG_VERSION@/${version}/g" script/ovd-subsystem-config.in > script/ovd-subsystem-config
+setup_args = {
+	'name' : "ovd-subsystem",
+	'description' : "OVD Subsystem",
+	'long_description' : "Ulteo OVD Subsystem sources",
+	'author' : "Ulteo SAS",
+	'author_email' : "report-ovd-bugs@ulteo.com",
+	'url' : "http://www.ulteo.com/",
+	'version' : "@PKG_VERSION@",
+	'license' : "GPL v2",
+	'platforms' : "Linux",
+}
+
+if __name__ == "__main__":
+	setup(**setup_args)
