Backport from trunk: Bugfix #306: failed to logoff persistent session on 2008R2   * r7528: Bugfix: The OvdServer failed to logoff session on 2008R2 (bug 306)   * r7549: Bugfix(#306): persistent session problem with 2008r2
git-svn-id: file:///home/code/svn/ovd/branches/3.0@7750 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/OvdServer/examples/slaveserver.conf
+++ b/OvdServer/examples/slaveserver.conf
@@ -24,6 +24,11 @@ level = error warn info debug
 # multithread = 
 # use thread system instead of multi processing
 # default is 0
+#
+# checkShell =
+# Consider that a session is an ulteo session 
+# only if the shell start with OVD
+# default is false
 
 
 [Gateway]
