Add Greek support and translations for the client part
git-svn-id: file:///home/code/svn/ovd/trunk@7757 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/web/media/image/flags/Makefile.am
+++ b/client/web/web/media/image/flags/Makefile.am
@@ -67,6 +67,7 @@ scripts_DATA = ad.png \
                eg.png \
                eh.png \
                el.png \
+               el-gr.png \
                en-en.png \
                en-gb.png \
                en-us.png \
