Move window functions to windowUtil.c
git-svn-id: file:///home/code/svn/ovd/trunk@7760 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/ApplicationServer/windows/seamlessrdpshell/HookDll/hookdll.vcproj
+++ b/ApplicationServer/windows/seamlessrdpshell/HookDll/hookdll.vcproj
@@ -205,6 +205,14 @@
 			RelativePath=".\seamlessWindowHistory.h"
 			>
 		</File>
+		<File
+			RelativePath="..\windowUtil.c"
+			>
+		</File>
+		<File
+			RelativePath="..\windowUtil.h"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
