Improvement: New Windows seamless architecture (IPC)
git-svn-id: file:///home/code/svn/ovd/trunk@7768 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/ApplicationServer/windows/seamlessrdpshell/HookDll/hookdll.vcproj
+++ b/ApplicationServer/windows/seamlessrdpshell/HookDll/hookdll.vcproj
@@ -190,19 +190,7 @@
 			>
 		</File>
 		<File
-			RelativePath="..\seamlessWindow.c"
-			>
-		</File>
-		<File
-			RelativePath="..\seamlessWindow.h"
-			>
-		</File>
-		<File
-			RelativePath="..\seamlessWindowHistory.c"
-			>
-		</File>
-		<File
-			RelativePath="..\seamlessWindowHistory.h"
+			RelativePath=".\hookdll.h"
 			>
 		</File>
 		<File
