Split InternalWindow code
git-svn-id: file:///home/code/svn/ovd/trunk@7774 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/ApplicationServer/windows/seamlessrdpshell/HookDll/hookdll.vcproj
+++ b/ApplicationServer/windows/seamlessrdpshell/HookDll/hookdll.vcproj
@@ -194,6 +194,14 @@
 			>
 		</File>
 		<File
+			RelativePath="..\internalWindow.c"
+			>
+		</File>
+		<File
+			RelativePath="..\internalWindow.h"
+			>
+		</File>
+		<File
 			RelativePath="..\windowUtil.c"
 			>
 		</File>
