--- a/ApplicationServer/windows/seamlessrdpshell/clipper.vcproj
+++ b/ApplicationServer/windows/seamlessrdpshell/clipper.vcproj
@@ -211,6 +211,14 @@
 			>
 		</File>
 		<File
+			RelativePath=".\internalWindow.c"
+			>
+		</File>
+		<File
+			RelativePath=".\internalWindow.h"
+			>
+		</File>
+		<File
 			RelativePath=".\main.c"
 			>
 		</File>
