Move SeamlessChannel_* and SeamlessWindow_* functions
git-svn-id: file:///home/code/svn/ovd/trunk@7778 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/ApplicationServer/windows/seamlessrdpshell/clipper.vcproj
+++ b/ApplicationServer/windows/seamlessrdpshell/clipper.vcproj
@@ -227,6 +227,14 @@
 			>
 		</File>
 		<File
+			RelativePath=".\seamlessChannel.c"
+			>
+		</File>
+		<File
+			RelativePath=".\seamlessChannel.h"
+			>
+		</File>
+		<File
 			RelativePath=".\seamlessWindow.c"
 			>
 		</File>
