Backport from trunk: Feature: add options in webclient for packet compression and persistent cache   * r7556: Improvement: function (getIniProfile, getRegistryProfile) used in the Ulteo Options class are moved to the nativeClient   * r7557: Feature: add an option for persistent cache and packet compression activation   * r7558: Bugfix: the previous cause an compilation error   * r7559: Feature: new option management for applet using a remote INI file   * r7560: Feature: the webClient get a config from a web service   * r7561: Bugfix: Persistent cache size sent to the server was not correct   * r7611: Bugfix: missing file in Makefile.am (caused by 7559)
git-svn-id: file:///home/code/svn/ovd/branches/3.0@7789 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/web/Makefile.am
+++ b/client/web/web/Makefile.am
@@ -1,6 +1,7 @@
 SUBDIRS = applet includes media PEAR
 
 scripts_DATA = applications.php \
+               config.php \
                external.php \
                icon.php \
                index.php \
