Feature: add Gateway root path redirection
git-svn-id: file:///home/code/svn/ovd/trunk@7805 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/OvdServer/examples/slaveserver.conf
+++ b/OvdServer/examples/slaveserver.conf
@@ -47,6 +47,10 @@ level = error warn info debug
 # enable the web admin redirection
 # default value is 'false'
 
+# root_redirection = /ovd
+# enable root path to a another path
+# default value is empty, so the root path is not redirected
+
 # http_keep_alive = true|false
 # keep enabled the keep alive HTTP feature if used, disabled instead
 # default value is 'true'
