Add new Internationalization documentation
git-svn-id: file:///home/code/svn/ovd/trunk@7820 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -16,6 +16,7 @@ SRC=\
 	Installation_ApS_Windows.xml \
 	Installation_Gateway_Lucid.xml \
 	Installation_Iso.xml \
+	Internationalization.xml \
 	NativeClient.xml \
 	Protocol.xml \
 	Scalability.xml \
