--- a/SessionManager/web/admin/includes/Makefile.am
+++ b/SessionManager/web/admin/includes/Makefile.am
@@ -1,7 +1,9 @@
 scripts_DATA = core.inc.php \
                core-minimal.inc.php \
                functions.inc.php \
+               misc.php \
                page_template.php \
+               page_template_static.php \
                template_server.inc.php
 
 scriptsdir = $(datadir)/ulteo/sessionmanager/admin/includes
