Code cleaning: move all ajaplorer specific code into a ajaxplorer dedicated class
git-svn-id: file:///home/code/svn/ovd/trunk@7836 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/web/Makefile.am
+++ b/client/web/web/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = applet auth includes media PEAR
+SUBDIRS = applet auth classes includes media PEAR
 
 scripts_DATA = applications.php \
                config.php \
