Bugfix: since 7836: fix autotools regression
git-svn-id: file:///home/code/svn/ovd/trunk@7837 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/configure.ac.in
+++ b/client/web/configure.ac.in
@@ -98,6 +98,7 @@ web/Makefile
 web/applet/Makefile
 web/auth/Makefile
 web/auth/cas/Makefile
+web/classes/Makefile
 web/includes/Makefile
 web/media/Makefile
 web/media/image/Makefile
