Code cleaning: create a SessionManager class and move query_sm and query_sm_post_xml as static functions
git-svn-id: file:///home/code/svn/ovd/trunk@7894 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/web/classes/Makefile.am
+++ b/client/web/web/classes/Makefile.am
@@ -1,4 +1,5 @@
-scripts_DATA = Ajaxplorer.class.php
+scripts_DATA = Ajaxplorer.class.php \
+               SessionManager.class.php
 
 scriptsdir = $(datadir)/ulteo/webclient/classes
 
