Feature: Seamless active monitoring
git-svn-id: file:///home/code/svn/ovd/trunk@7949 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/ApplicationServer/windows/seamlessrdpshell/clipper.vcproj
+++ b/ApplicationServer/windows/seamlessrdpshell/clipper.vcproj
@@ -203,6 +203,14 @@
 	</References>
 	<Files>
 		<File
+			RelativePath=".\activeThread.c"
+			>
+		</File>
+		<File
+			RelativePath=".\activeThread.h"
+			>
+		</File>
+		<File
 			RelativePath=".\clipper.rc"
 			>
 		</File>
