Bugfix: missing unjar directive in build.xml preventing from using Constant class in RdpClient target
git-svn-id: file:///home/code/svn/ovd/trunk@7976 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -115,7 +115,7 @@
   <target name="rdpClient.jar" depends="rdpClient">
     <unjar dest="build">
       <filelist dir="required_libraries"
-                files="gnu-getopt.jar, log4j-1.2.jar, jpedal.jar,
+                files="gnu-getopt.jar, log4j-1.2.jar, jpedal.jar, registry.jar,
                        commons-httpclient-3.0.1.jar, commons-logging-1.1.1.jar" />
     </unjar>
     <copy file="icons/ulteo.png" todir="build/pics" />
