--- a/packaging/windows/ovd-java-jni/package.conf
+++ b/packaging/windows/ovd-java-jni/package.conf
@@ -8,6 +8,9 @@ pre_sources_commads:
   - javac -sourcepath @SVN_ROOT@/client/java/src -classpath @SVN_ROOT@/client/java/required_libraries/registry.jar @SVN_ROOT@/client/java/src/org/ulteo/utils/jni/WindowsTweaks.java
   - javah -classpath @SVN_ROOT@/client/java/src -d . org.ulteo.utils.jni.WindowsTweaks
 
+  - javac -sourcepath @SVN_ROOT@/client/java/src @SVN_ROOT@/client/java/src/org/ulteo/ovd/disk/WNetApi.java
+  - javah -classpath @SVN_ROOT@/client/java/src -d . org.ulteo.ovd.disk.WNetApi
+
 compile_commands:
   - "make -f Makefile.WIN32"
 
