--- a/client/java/windowsPathsJNI/Makefile
+++ b/client/java/windowsPathsJNI/Makefile
@@ -2,6 +2,7 @@
 # http://www.ulteo.com
 # Author Thomas MOUTON <thomas@ulteo.com> 2010-2011
 # Author Samuel BOVEE <samuel@ulteo.com> 2010
+# Author David LECHEVALIER <david@ulteo.com> 2011
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -21,14 +22,14 @@ BINPREFIX?=i586-mingw32msvc-
 CC=$(BINPREFIX)gcc
 JAVAHOME?=/usr/lib/jvm/java-1.6.0-openjdk
 CFLAGS=-Wall -I${JAVAHOME}/include -I${JAVAHOME}/include/linux
-LDFLAGS=
+LDFLAGS= -lmpr
 EXEC=libWindowsPaths.dll
 
 
 all: $(EXEC)
 
-$(EXEC): org_ulteo_ovd_integrated_WindowsPaths.o org_ulteo_ovd_integrated_WindowsPaths.def
-	$(CC) $(LDFLAGS) -shared -o $@ $^
+$(EXEC): org_ulteo_ovd_integrated_WindowsPaths.o org_ulteo_ovd_disk_WNetApi.o org_ulteo_ovd_integrated_WindowsPaths.def
+	$(CC) $^ $(LDFLAGS) -shared -o $@
 
 org_ulteo_ovd_integrated_WindowsPaths.h:
 	javac -classpath ../src:../required_libraries/registry.jar -d . ../src/org/ulteo/ovd/integrated/WindowsPaths.java
@@ -38,7 +39,11 @@ org_ulteo_utils_jni_WindowsTweaks.h:
 	javac -classpath ../src:../required_libraries/registry.jar -d . ../src/org/ulteo/utils/jni/WindowsTweaks.java
 	javah org.ulteo.utils.jni.WindowsTweaks
 
-%.o: %.c %.h org_ulteo_utils_jni_WindowsTweaks.h
+org_ulteo_ovd_disk_WNetApi.h:
+	javac -classpath ../src -d . ../src/org/ulteo/ovd/disk/WNetApi.java
+	javah org.ulteo.ovd.disk.WNetApi
+
+%.o: %.c %.h org_ulteo_utils_jni_WindowsTweaks.h org_ulteo_ovd_disk_WNetApi.h
 	$(CC) $(CFLAGS) -c -o $@ $<
 
 clean:
@@ -46,6 +51,7 @@ clean:
 	$(RM) *~
 	$(RM) org_ulteo_ovd_integrated_WindowsPaths.h
 	$(RM) org_ulteo_utils_jni_WindowsTweaks.h
+	$(RM) org_ulteo_ovd_disk_WNetApi.h
 
 install: all
 	install $(EXEC) $(DIST)
