--- a/packaging/debian/ovd-java-clients/wheezy/control
+++ b/packaging/debian/ovd-java-clients/wheezy/control
@@ -3,7 +3,7 @@ Section: utils
 Priority: optional
 Maintainer: Samuel Bovée <samuel@ulteo.com>
 Build-Depends: debhelper (>= 6), cdbs, ulteo-ovd-cert,
- default-jdk, ant, ant-optional, mingw32, libx11-dev
+ default-jdk, icedtea-netx-common, ant, ant-optional, mingw32, libx11-dev
 Standards-Version: 3.8.2
 
 Package: ulteo-ovd-applets
