Packaging: bugfix: add a specific path location for classpath in build.xml for Wheezy distribution
git-svn-id: file:///home/code/svn/ovd/trunk@8042 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/java/build.xml.in
+++ b/client/java/build.xml.in
@@ -311,6 +311,7 @@
       <classpath>
         <path refid="minimal.path" />
         <pathelement location="${java.home}/lib/plugin.jar"/>
+        <pathelement location="/usr/share/icedtea-web/plugin.jar"/> <!-- for wheezy distribution -->
         <pathelement location="required_libraries/jpedal.jar"/>
         <pathelement location="required_libraries/jshortcut.jar"/>
         <pathelement location="required_libraries/image4j.jar"/>
