Use of freedesktop's python-xdg library to manage linux external applications
git-svn-id: file:///home/code/svn/ovd/trunk@8070 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/OvdServer/examples/slaveserver.conf
+++ b/OvdServer/examples/slaveserver.conf
@@ -30,6 +30,10 @@ level = error warn info debug
 # Consider that a session is an ulteo session 
 # only if the shell start with OVD
 # default is false
+#
+# linux_icon_theme = 
+# use this icon theme by default for exported applications
+# default is CrystalGnome
 
 
 [Gateway]
