--- a/packaging/debian/ovd-slaveserver/lenny/control
+++ b/packaging/debian/ovd-slaveserver/lenny/control
@@ -18,7 +18,7 @@ Architecture: all
 Depends: ${python:Depends},
  ulteo-ovd-slaveserver, ulteo-ovd-shells, ulteo-ovd-externalapps-client,
  xrdp-python, xrdp-seamrdp, xrdp-rdpdr, xrdp-printer, xrdp-sound, xrdp-clipboard,
- tightvncserver, desktop-file-utils, imagemagick, passwd, adduser, rsync, smbfs
+ tightvncserver, desktop-file-utils, imagemagick, passwd, adduser, rsync, smbfs, python-xdg
 Description: Ulteo Open Virtual Desktop - application server role for slave server
  Application server role for the Ulteo OVD slave server
 
