Improvement: perform the publication before manage the server in the init script (because the server may be not present yet so the script exit)
git-svn-id: file:///home/code/svn/ovd/trunk@8071 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/web/admin/init/demo.php.in
+++ b/SessionManager/web/admin/init/demo.php.in
@@ -1,8 +1,9 @@
 <?php
 /**
- * Copyright (C) 2008-2010 Ulteo SAS
+ * Copyright (C) 2008-2012 Ulteo SAS
  * http://www.ulteo.com
- * Author Laurent CLOUET <laurent@ulteo.com>
+ * Author Laurent CLOUET <laurent@ulteo.com> 2008-2010
+ * Author Julien LANGLOIS <julien@ulteo.com> 2012
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
@@ -70,6 +71,13 @@ if (!$res) {
 	die();
 }
 
+// publication
+$ret = Abstract_Liaison::save('UsersGroupApplicationsGroup', $usersGroup->getUniqueID(), $appsGroup->id);
+if ($ret !== true) {
+	Logger::error('main', 'demo.php failed make publication');
+	die();
+}
+
 // server
 $server = Abstract_Server::load('127.0.0.1');
 if (! is_object($server)) {
@@ -80,13 +88,6 @@ $server->register();
 $server->setAttribute('external_name', $server_external_name);
 $server->setAttribute('locked', false);
 Abstract_Server::save($server);
-
-// publication
-$ret = Abstract_Liaison::save('UsersGroupApplicationsGroup', $usersGroup->getUniqueID(), $appsGroup->id);
-if ($ret !== true) {
-	Logger::error('main', 'demo.php failed make publication');
-	die();
-}
 
 $applications = $server->getApplications();
 if (is_array($applications)) {
