Bugfix #442: Unable to access the Gateway using Google Chrome 16 , Firefox 10 or IE9 afer winhttp update
git-svn-id: file:///home/code/svn/ovd/trunk@8075 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/OvdServer/examples/slaveserver.conf
+++ b/OvdServer/examples/slaveserver.conf
@@ -42,6 +42,8 @@ level = error warn info debug
 # max_process = 10
 # max_connection = 100
 # process_timeout = 60
+# connection_timeout = 10
+# http_max_header_size = 2048
 
 # web_client = http[s]://ip[:port]/
 # determine the OVD Web Client address
