--- a/SessionManager/configure.ac.in
+++ b/SessionManager/configure.ac.in
@@ -1,9 +1,10 @@
-# Copyright (C) 2008-2010 Ulteo SAS
+# Copyright (C) 2008-2012 Ulteo SAS
 # http://www.ulteo.com
 # Author Gauvain POCENTEK <gauvain@linutop.com> 2008-2009
 # Author Jeremy DESVAGES <jeremy@ulteo.com> 2009-2010
 # Author Samuel BOVEE <samuel@ulteo.com> 2010
 # Author Laurent CLOUET <laurent@ulteo.com> 2010
+# Author Jocelyn DELALANDE <j.delalande@ulteo.com> 2012
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -117,7 +118,7 @@ AC_ARG_WITH([libchart],
     [libchart=yes])
 if test "$libchart" = "yes"; then
     LIBCHARTDIR=/usr/share/php/libchart/classes/libchart.php
-    test -e $LIBCHARDIR && AC_MSG_ERROR([$LIBCHARTDIR not found ; deploy PHP libchart library.])
+    test -e $LIBCHARDIR || AC_MSG_ERROR([$LIBCHARTDIR not found ; deploy PHP libchart library.])
 else
     DISTCHECK_CONFIGURE_FLAGS+=" --without-libchart"
     AC_SUBST(DISTCHECK_CONFIGURE_FLAGS)
