Bugfix #435: When network is lost for a long time, the client did not detect the network lost
git-svn-id: file:///home/code/svn/ovd/trunk@8106 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/ApplicationServer/desktop/configure.ac.in
+++ b/ApplicationServer/desktop/configure.ac.in
@@ -19,6 +19,7 @@
 
 AC_PREREQ(2.59)
 AC_COPYRIGHT([Copyright (c) Samuel Bovée])
+m4_pattern_allow([^m4])
 AC_INIT([ovd-desktop-settings], [@VERSION@], [http://bugs.ulteo.com])
 
 AM_INIT_AUTOMAKE([1.8])
