Feature: add TLS transport layer support
git-svn-id: file:///home/code/svn/ovd/trunk@8110 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/config/config.client.ini
+++ b/client/web/config/config.client.ini
@@ -23,6 +23,10 @@
 # when useKeepAlive is activated, configure the connectivity check interval in second
 #  default is 60
 
+# useTLS = true|false
+# use TLS encryption instead of RDP encryption
+#  default is false
+
 
 [persistentCache]
 # persistent cache option (if usePersistentCache is previously set to true)
