Feature: add the session dumps from the ApS into the Session report
git-svn-id: file:///home/code/svn/ovd/trunk@8179 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/SessionManager/web/webservices/Makefile.am
+++ b/SessionManager/web/webservices/Makefile.am
@@ -4,6 +4,7 @@ scripts_DATA =  application_icon.php \
                 domain.php \
                 server_monitoring.php \
                 server_name.php \
+                session_dump.php \
                 session_status.php \
                 server_status.php \
                 application.php
