--- a/SessionManager/web/includes/defaults.inc.php.in
+++ b/SessionManager/web/includes/defaults.inc.php.in
@@ -1,9 +1,10 @@
 <?php
 /**
- * Copyright (C) 2008 Ulteo SAS
+ * Copyright (C) 2008-2012 Ulteo SAS
  * http://www.ulteo.com
- * Author Laurent CLOUET <laurent@ulteo.com>
- * Author Jeremy DESVAGES <jeremy@ulteo.com>
+ * Author Laurent CLOUET <laurent@ulteo.com> 2008-2011
+ * Author Jeremy DESVAGES <jeremy@ulteo.com> 2008-2011
+ * Author David LECHEVALIER <david@ulteo.com> 2012
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
@@ -32,6 +33,7 @@ define('DEFAULT_LOGO_URL', '/ovd/admin/media/image/header.png');
 define('DEFAULT_REQUEST_TIMEOUT', 10);
 
 define('DEFAULT_CACHE_DURATION', 60);
+define('DESTROYING_DURATION', 60);
 define('DEFAULT_UNUSED_SESSION_DURATION', 600);
 
 define('LOCALE_DIR', '@LOCALE_DIR@');
