Improvement: add option in order to specify the number of processes for ApplicationServer
git-svn-id: file:///home/code/svn/ovd/trunk@8221 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/OvdServer/examples/slaveserver.conf
+++ b/OvdServer/examples/slaveserver.conf
@@ -22,9 +22,10 @@ level = error warn info debug
 
 
 [ApplicationServer]
-# multithread = 
-# use thread system instead of multi processing
-# default is true
+# thread_count = 
+# Define the number of processes used by the Application Server
+# or 'auto' for an automatic detection
+# default is 1
 #
 # checkShell =
 # Consider that a session is an ulteo session 
