Add Persian translations & support for client part
git-svn-id: file:///home/code/svn/ovd/trunk@8258 2b2718be-6ee5-4ec5-ad1a-3fa14f9c7ca3

--- a/client/web/web/media/image/flags/Makefile.am
+++ b/client/web/web/media/image/flags/Makefile.am
@@ -75,6 +75,7 @@ scripts_DATA = ad.png \
                es.png \
                es-es.png \
                et.png \
+               fa-ir.png \
                fam.png \
                fi.png \
                fj.png \
