--- a/ApplicationServer/windows/PDFPrinterDriver/ulteodll.inf.in
+++ b/ApplicationServer/windows/PDFPrinterDriver/ulteodll.inf.in
@@ -14,6 +14,10 @@ Class=Printer
 ClassGUID={4D36E979-E325-11CE-BFC1-08002BE10318}
 DriverVer=06/22/2012,1.0.0.0
 Version=@VERSION@
+CatalogFile=ulteo.cat
+CatalogFile.ntx86=ulteo.cat
+CatalogFile.ntamd64=ulteo.cat
+CatalogFile.ntia64=ulteo.cat
 
 ;
 ; Manufacturer section.
